commit error en la copia completa del archivo

--- a/practicasHTML/Sheet1/ex03/index.html
+++ b/practicasHTML/Sheet1/ex03/index.html
@@ -35,5 +35,5 @@ racticar con etiquetas html de texto"
     presidente. Actualmente Vinton Cerf es el vicepresidente mundial y Chie f
     Internet Evangelist de Google. Es miembro del Consejo Asesor Internacional
     del Centro Cult ural Internacional Oscar Niemeyer de Avilés, Asturias.
-  </body>
+  Fuente: Wikipedia
 </html>
