commit ex04 completado

--- a/practicasHTML/Sheet1/ex04/index.html
+++ b/practicasHTML/Sheet1/ex04/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ejercicio4</title>
+  </head>
+  <body>
+    <h1>
+      <strong>Titulo principal que resume la idea general del escrito</strong>
+    </h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium, nisi
+      eius tempore eum inventore ex ullam, consequatur voluptatem sunt
+      temporibus sit perspiciatis sed officiis perferendis, quia cumque aliquam
+      natus. Eius!
+    </p>
+    <h2>Primera idea principal a desarrollar en el escrito.</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis
+      consequatur voluptate quod sint eum aspernatur placeat ratione
+      necessitatibus nobis ipsam veniam natus vero inventore ea, optio minus
+      accusamus, iure rerum!
+    </p>
+    <h3>Primer subtema a desarrollar de la primera idea principal.</h3>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos,
+      tempore velit totam fuga explicabo dolores id ex quasi deserunt est?
+      Pariatur modi ipsam fugit iste eaque. Aspernatur delectus molestiae odio.
+    </p>
+    <h3>Segundo subtema a desarrollar de la primera idea principal.</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, ducimus,
+      repudiandae error reiciendis accusantium aperiam aliquid, laborum tenetur
+      perferendis neque architecto aspernatur quod id sapiente dolorem
+      temporibus dignissimos officia reprehenderit.
+    </p>
+    <h2>Segunda idea principal a desarrollar en el escrito.</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium
+      illum modi facere quo possimus id veniam aperiam minus, repellat, quisquam
+      praesentium odio, labore aliquid nobis cupiditate non mollitia adipisci.
+    </p>
+    <h3>Primer subtema a desarrollar de la segunda idea principal.</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+      asperiores sapiente dicta aliquam, consectetur ab obcaecati laudantium,
+      quia nostrum illum voluptatibus, odio et ad eaque suscipit aliquid labore
+      dignissimos numquam.
+    </p>
+    <h3>Segundo subtema a desarrollar de la segunda idea principal.</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ex
+      voluptate minus, rerum suscipit obcaecati nemo esse architecto provident
+      odit, dolores laboriosam sunt adipisci! Deleniti exercitationem fugiat
+      corrupti iure quaerat!
+    </p>
 
+    <h1><strong>Conclusiones</strong></h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quaerat
+      repellat earum autem. Assumenda reprehenderit aliquam beatae provident
+      nostrum mollitia nesciunt sunt, ipsa quia minima laborum, soluta
+      asperiores suscipit doloribus.
+    </p>
+    <footer>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea vel ullam
+      dignissimos. Eveniet cupiditate deleniti ducimus? Quos dignissimos nobis
+      nulla quis, voluptates incidunt quisquam cumque nostrum culpa, doloremque
+      necessitatibus deserunt.
+    </footer>
+  </body>
+</html>
