commit ex05 terminado

--- a/practicasHTML/Sheet1/ex05/index.html
+++ b/practicasHTML/Sheet1/ex05/index.html
@@ -1,1 +1,12 @@
+<p>&semi;</p>
+<p>&lt;</p>
+<p>&gt;</p>
+<p>&amp;</p>
+<p>&quot;</p>
+<p>&apos;</p>
+<p>&bsol;</p>
+<p>&sol;</p>
+<p>&copy;</p>
+<p>&nbsp;</p>
+<p>&euro;</p>
 
