--- a/practicasHTML/Sheet1/ex10/index.html
+++ b/practicasHTML/Sheet1/ex10/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <ul type="discs">
+        <li>Nadadores</li>
+        <li>Ciclistas</li>
+        <li>Atleta</li>
+        <li>Futbolistas
+            <ul type="circle">
+                <li>Messi</li>
+                <li>CR7</li>
+                <li>Joao</li>
+            </ul>
+        </li>
+    </ul>
+    <hr>
+    <ul type="discs">
+        <li>Barcelona
+            <ul type="circle">
+                <li>Mataró</li>
+                <li>Sabadell</li>
+            </ul>
+        </li>
+        <li>
+            <ul type="circle"></ul>
+        </li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
+
 </html>
