--- a/practicasHTML/Sheet1/ex10/index.html
+++ b/practicasHTML/Sheet1/ex10/index.html
@@ -28,11 +28,34 @@
                 <li>Sabadell</li>
             </ul>
         </li>
-        <li>
-            <ul type="circle"></ul>
+        <li>Tarragona
+            <ul type="circle">
+                <li>Reus</li>
+                <li>Salou</li>
+                <li>Cambrils</li>
+            </ul>
         </li>
-        <li></li>
-        <li></li>
+        <li>Lleida</li>
+        <li>Girona</li>
+    </ul>
+    <hr>
+    <ul type="discs">
+        <li>Sobre mi</li>
+        <li>Servicios</li>
+        <li>Tutoriales
+            <ul type="circle">
+                <li>Tutorial HTML <ul>
+                        <li>Enlaces</li>
+                        <li>imagenes</li>
+                        <li>Listas</li>
+                    </ul>
+                </li>
+                <li>Tutorial CSS</li>
+                <li>Tutorial javascript</li>
+                <li>Tutorial wordpress</li>
+            </ul>
+        </li>
+        <li>Contacto</li>
     </ul>
 </body>
 
