--- a/practicasHTML/Sheet01/ex13/index.html
+++ b/practicasHTML/Sheet01/ex13/index.html
@@ -6,6 +6,11 @@
     <title>Mapa de imagen</title>
 </head>
 <body>
-    
+    <img src="../../../res/letra-f.jpg" alt="letra-f" usemap="#letra-f">
+<map name="letra-f">
+    <area shape="rect" coords="105,95,125,207" href="https://es.wikipedia.org/wiki/Oeste." >
+    <area shape="rect" coords="126,95,215,117" href="https://es.wikipedia.org/wiki/Norte." >
+    <area shape="rect" coords="128,140,215,160" href="https://es.wikipedia.org/wiki/Centro." >
+</map>
 </body>
 </html>
