--- a/practicasCSS/Sheet01/ex01/index.html
+++ b/practicasCSS/Sheet01/ex01/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, init
 ial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ejercicio 1</title>
     <style>
         /* Aquí van tus estilos CSS */
