--- a/practicasCSS/Sheet01/ex02/index.html
+++ b/practicasCSS/Sheet01/ex02/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, init
 ial-scale=1.0">
     <title>Ejercicio 2</title>
-    <style></style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
