--- a/practicasCSS/Sheet01/ex08/index.html
+++ b/practicasCSS/Sheet01/ex08/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, init
 ial-scale=1.0">
     <title>Ejercicio 8</title>
-    <style>
-        /* Aquí van tus estilos CSS */
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="background-image">Este div tiene una imagen
-        de fondo.</div>
+    <div class="background-image">
+        Este div tiene una imagen
+        de fondo.
+        </div>
 </body>
 
 </html>
