--- a/practicasCSS/Sheet01/ex08/index.html
+++ b/practicasCSS/Sheet01/ex08/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, init
 ial-scale=1.0">
     <title>Ejercicio 8</title>
-    <style>
-        /* Aquí van tus estilos CSS */
-    </style>
 </head>
 
 <body>
