--- a/practicasCSS/Sheet01/ex09/index.html
+++ b/practicasCSS/Sheet01/ex09/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, init
 ial-scale=1.0">
     <title>Ejercicio 9</title>
-    <style>
-        /* Aquí van tus estilos CSS */
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
