--- a/practicasCSS/Sheet01/ex15/index.html
+++ b/practicasCSS/Sheet01/ex15/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 15</title>
-    <style>
-        /* Aquí van tus estilos CSS */
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
