--- a/practicasCSS/Sheet01/ex23/index.html
+++ b/practicasCSS/Sheet01/ex23/index.html
@@ -8,9 +8,7 @@
 ial-scale=1.0"
     />
     <title>Ejercicio 23</title>
-    <style>
-      /* Aquí van tus estilos CSS */
-    </style>
+   <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p>Redimensiona la ventana para ver el efecto.</p>
