--- a/practicasCSS/Sheet01/ex24/index.html
+++ b/practicasCSS/Sheet01/ex24/index.html
@@ -8,9 +8,7 @@
 ial-scale=1.0"
     />
     <title>Ejercicio 24</title>
-    <style>
-      /* Aquí van tus estilos CSS */
-    </style>
+<link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="flex-container">
