--- a/practicasCSS/Sheet02/index.html
+++ b/practicasCSS/Sheet02/index.html
@@ -14,10 +14,10 @@
             <h4><strong>TRADE</strong></h4>
             <div class="navigation">
                 <ul class="navlist">
-                    <li>Link1</li>
-                    <li>Link2</li>
-                    <li>Link3</li>
-                    <li>Link4</li>
+                    <li><a href="">Link1</a></li>
+                    <li><a href="">Link2</a></li>
+                    <li><a href="">Link3</a></li>
+                    <li><a href="">Link4</a></li>
                 </ul>
                 <button>Sign Up</button>
             </div>
