--- a/practicasCSS/Sheet03/index.html
+++ b/practicasCSS/Sheet03/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="triangle_tr"></div>
+    <div class="triangle_tl"></div>
+    <div class="circle_br"></div>
+    <div class="circle_bl"></div>
+
+
+
 </body>
+
 </html>
