--- a/practicasCSS/Sheet03/index.html
+++ b/practicasCSS/Sheet03/index.html
@@ -13,6 +13,13 @@
     <div class="triangle_tl"></div>
     <div class="circle_br"></div>
     <div class="circle_bl"></div>
+    <div class="container">
+        <header>
+            <nav>
+                <input type="text" class="searchbar" placeholder="Filtra Pokémon por nombre...">
+            </nav>
+        </header>
+    </div>
 
 
 
