--- a/practicasJS/Sheet04/ex01/index.html
+++ b/practicasJS/Sheet04/ex01/index.html
@@ -8,8 +8,9 @@
     <script type="module" src="script.js"></script>
 </head>
 <body>
-    
+    <section id="tareas">
 
+    </section>
 </body>
 
 </html>
