add: form al index.html

--- a/practicasJS/Sheet04/ex02/index.html
+++ b/practicasJS/Sheet04/ex02/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de lista de tareas</title>
+    <title>Añadir nuevas tareas</title>
     <script type="module" src="script.js"></script>
 </head>
 
@@ -12,6 +12,9 @@
     <section id="tareas">
 
     </section>
+    <form id="form-tarea">
+        <input type="text" name="descripción" placeholder="Nueva tarea">
+        <button type="submit">Agregar</button>
 </body>
 
 </html>
