add: p y span para contador de tareas

--- a/practicasJS/Sheet04/ex02/index.html
+++ b/practicasJS/Sheet04/ex02/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <section id="tareas">
-
     </section>
+    <p>nº de tareas: <span class="nºTareas"></span></p>
     <form id="form-tarea">
         <input type="text" name="descripción" placeholder="Nueva tarea">
         <button type="submit">Agregar</button>
