refactor: cambiada clase de span numero de tareas porque contenía simbolos

--- a/practicasJS/Sheet04/ex02/index.html
+++ b/practicasJS/Sheet04/ex02/index.html
@@ -11,7 +11,7 @@
 <body>
     <section id="tareas">
     </section>
-    <p>nº de tareas: <span class="nºTareas"></span></p>
+    <p>nº de tareas: <span class="nTareas"></span></p>
     <form id="form-tarea">
         <input type="text" name="descripción" placeholder="Nueva tarea">
         <button type="submit">Agregar</button>
