--- a/practicasJS/Sheet04/ex03/index.html
+++ b/practicasJS/Sheet04/ex03/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Añadir nuevas tareas</title>
     <script type="module" src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,5 +17,4 @@
         <input type="text" name="descripción" placeholder="Nueva tarea">
         <button type="submit">Agregar</button>
 </body>
-
 </html>
