feat: tarea asíncrona fetch pokemon y creación de tarjetas según los elementos de un array con los datos obtenidos

--- a/practicasJS/sheet06/index.html
+++ b/practicasJS/sheet06/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../../../res/pokeico.ico">
+    <script src="script.js"></script>
     <title>Pokedex</title>
 </head>
 
@@ -25,22 +26,8 @@
                 <input type="search" class="searchbar" placeholder="Filtra Pokémon por nombre...">
             </nav>
         </header>
-
         <main class="pokecard pokecard__grid">
-
-            <article class="pokecard pokecard__item">
-                <header>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
-                    <p class="pokeID">ID/1</p>
-                </header>
-                <footer>
-                    <h2>Bulbasaur</h2>
-                    <p class="poketypes"><span>GRASS</span>&nbsp;<span>POISON</span></p>
-                    <p class="blankspace"></p>
-                </footer>
-            </article>
-
-        
+            
         </main>
     </div>
 </body>
