add: paginator basico al html

--- a/practicasJS/sheet06/index.html
+++ b/practicasJS/sheet06/index.html
@@ -11,7 +11,6 @@
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../../../res/pokeico.ico">
-    <script src="script.js"></script>
     <title>Pokedex</title>
 </head>
 
@@ -27,9 +26,15 @@
             </nav>
         </header>
         <main class="pokecard pokecard__grid">
-            
+
         </main>
+        <footer class="paginator">
+            <button class="paginator paginator__back">&lt;&lt;</button>
+            <p class="paginator paginator__status">Página:&nbsp;<span class="paginator paginator__pNumber"></span> </p>
+            <button class="paginator paginator__next">&gt;&gt;</button>
+        </footer>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
