style: cambiado el css a tailwind

--- a/practicasReact/Sheet04/index.html
+++ b/practicasReact/Sheet04/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="bg-[rgb(var(--color-pikachu))] size-full inline-block">
-  <div id="root">
+  <div id="root" class="w-60/100 mt-0 mb-4 mx-auto">
   </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
